# colex

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  colex.cpp  colex.hpp  doctest.cpp  doctest.hpp  expression_interface.hpp  expressions.hpp  install.sh  iterator_interface.hpp  iterators.hpp
expressions/inc/: expressions.hpp  interface.hpp
expressions/src/: append.hpp  chunk.hpp  chunk_map.hpp  composition.hpp  drop.hpp  enumerate.hpp  filter.hpp  flat_map.hpp  flatten.hpp  fold.hpp  for_each.hpp  map.hpp  partition.hpp  partition_map.hpp  prepend.hpp  scan.hpp  take.hpp  window.hpp
iterators/inc/: iterators.hpp
iterators/src/: chunk.hpp  chunk_map.hpp  concat.hpp  drop.hpp  enumerate.hpp  filter.hpp  flat_map.hpp  flatten.hpp  function.hpp  map.hpp  partition.hpp  partition_map.hpp  pointer.hpp  range.hpp  scan.hpp  stl.hpp  take.hpp  window.hpp  zip.hpp
